# token-wise-agent

./: .dockerignore  Dockerfile  README.md  pyproject.toml  run.py
.github/workflows/: publish.yml
agent/: agent_config.yaml  agent_config_user.yaml  agent_tracker.py  cli.py  config.py  prompt_config.yaml  token_tracker.py  trajectory.py  utils.py
agent/prompts/: system_prompt.j2  system_prompt_user.j2
agent/tools/: __init__.py  bash.py  smart_editor.py  submit.py
benchmarks/: README.md  run_benchmark.py
benchmarks/tasks/task_001_data_merger/: issue.md
benchmarks/tasks/task_001_data_merger/src/: merger.py
benchmarks/tasks/task_001_timeseries/: README.md  issue.md
benchmarks/tasks/task_002_array_stats/: issue.md
benchmarks/tasks/task_002_cache_invalidation/: README.md  issue.md
benchmarks/tasks/task_003_json_config/: README.md  issue.md
benchmarks/tasks/task_004_cli_batch/: README.md  issue.md
benchmarks/tasks/task_004_cli_batch/src/: cli.py  (+2 more)
benchmarks/tasks/task_004_outlier_detector/: issue.md
benchmarks/tasks/task_005_data_cleaner/: issue.md
benchmarks/tasks/task_005_log_sorting/: README.md  issue.md
benchmarks/tasks/task_006_async_pipeline/: README.md  issue.md
benchmarks/tasks/task_007_plugin_system/: README.md  issue.md
benchmarks/tasks/task_008_eventbus_race/: README.md  issue.md
benchmarks/tasks/task_009_orm_query_planner/: README.md  issue.md
benchmarks/tasks/task_010_config_merger/: README.md  issue.md
configs/: agent_config.yaml  agent_config_user.yaml  pricing.yaml
scripts/: analyze_trajectory.py
tests/: test_tools.py
(+65 files in other folders)
