[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "token-wise-agent"
dynamic = ["version"]
description = "AI coding assistant with pluggable tools and token tracking, built on OpenHands SDK"
requires-python = ">=3.12"
dependencies = [
    "openhands-ai>=1.4.0",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
]

[project.scripts]
twa = "agent.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "hatch-vcs>=0.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pytest>=9.0.2",
]
